--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','<%= gtmId %>');</script>
+    <!-- End Google Tag Manager -->
+
     <meta charset="UTF-8">
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TMG Marketing | Estratégia & Marketing para Advogados - Links</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -175,6 +184,10 @@
 <link rel="stylesheet" href="/index.css">
 </head>
 <body>
+     <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=<%= gtmId %>"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
 <script type="module" src="/index.tsx"></script>
 </body>
