--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- End Google Tag Manager -->
 
     <meta charset="UTF-8">
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/favicon/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TMG Marketing | Estratégia & Marketing para Advogados - Links</title>
     <script src="https://cdn.tailwindcss.com"></script>
